# efficient_fastapi_testing

./: .gitignore  Makefile  README.md  pyproject.toml
efficient_testing/: conftest.py  database.py  dependency.py  main.py  models.py  repository.py  schemas.py  test_api.py  test_repository.py  uuid_provider.py
efficient_testing/__snapshots__/: test_api.ambr
inefficient_testing/: crud.py  database.py  main.py  models.py  schemas.py  test_api.py
