[tool.poetry]
name = "efficient-fastapi-testing"
version = "0.1.0"
description = "Example project for Efficient FastAPI testing with pytest, dependency injection, and snapshots - talk on PyCon Italy 2025"
authors = ["Jan Giacomelli <jan@giacosoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
sqlalchemy = "^2.0.41"
fastapi = {extras = ["all"], version = "^0.115.12"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.11"
syrupy = "^4.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["F", "W", "E", "I"]
ignore = ["F541", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
